--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -30,9 +30,10 @@ nav ul {
    width: 100vw;
    height: 100vh;
    margin: 0;
-   padding: 5em 0;
+   padding: 1em 0;
    background-color: #262E3D;
    transition: transform 1s;
+   font-size: 7vh;
 }
 
 nav ul li {
@@ -40,7 +41,6 @@ nav ul li {
    position: relative;
    width: 100%;
    line-height: 11vh;
-   font-size: 7vh;
    padding-left: 0.5em;
 }
 
@@ -68,7 +68,7 @@ nav [type="checkbox"]:not(:checked) + label:before {
    height: 3px;
    background: #262E3D;
    margin: 10px 5px;
-   box-shadow: 0px 10px 0px #262E3D, 0px 20px 0px #262E3D
+   box-shadow: 0 10px 0 #262E3D, 0 20px 0 #262E3D
 }
 
 nav [type="checkbox"]:checked + label:before, nav [type="checkbox"]:checked + label:after {
@@ -96,7 +96,7 @@ nav [type="checkbox"]:checked + label:after {
 }
 
 nav [type="checkbox"]:checked ~ ul {
-   transform: translateX(-30vw);
+   transform: translateX(-7em);
 }
 
 nav [type="checkbox"]:checked ~ ul {
